Fix court challenge column alignment

--- a/src/components/views/PolicyPage/PolicyPage/CourtChallenges/CourtChallenges.module.scss
+++ b/src/components/views/PolicyPage/PolicyPage/CourtChallenges/CourtChallenges.module.scss
@@ -29,7 +29,7 @@
 
     .leftCol {
       flex-basis: 70%;
-      margin-right: 1rem;
+      margin-right: 4rem;
 
       .metadata {
         > div {
